# rag-prototype

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PLAN.md  README.md  TODO.md  conftest.py  docker-compose.yml  env.example  errors_starting_point.txt  project_assessment.md  pyproject.toml  pytest.ini  rep  src_all_files.txt  tests_all_files.txt
.github/workflows/: ci.yml
data/: faq.csv  index.faiss
docs/: arch.md  architecture.md
frontend/: index.html
scripts/: bootstrap.py  build_index.py  concatenate_src.py  concatenate_tests.py
src/: __init__.py  models.py  settings.py  utils.py
src/adapters/: __init__.py
src/adapters/embeddings/: __init__.py  openai.py  sentence_transformers.py
src/adapters/generation/: __init__.py  ollama_chat.py  openai_chat.py
src/adapters/retrieval/: __init__.py  dense_faiss.py  hybrid.py  sparse_bm25.py
src/app/: __init__.py  api_router.py  dependencies.py  factory.py  main.py
src/core/: __init__.py  ports.py  rag.py
src/core/domain/: entities.py
src/core/ports/: __init__.py
src/core/services/: etl.py  rag.py
src/db/: __init__.py  base.py  crud.py  models.py
src/infrastructure/embeddings/: openai.py  sentence_transformers.py
tests/: README.md  conftest.py
tests/data/: empty_faq_for_tests.csv
tests/e2e/: test_api.py
tests/integration/: test_api_ask.py  test_bootstrap_and_autopopulate.py  test_integration_faiss.py  test_integration_sentencetransformers.py  test_integration_sql.py
tests/unit/: test_build.py  test_db_setup.py  test_dependencies.py  test_rag.py  test_utils.py
(+27 files in other folders)
